syntax = 'proto3';

package cloud_foundry.perm.protos;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "actor.proto";

option go_package = "protos";
option (gogoproto.marshaler_all) = true;
option (gogoproto.sizer_all) = true;
option (gogoproto.unmarshaler_all) = true;

service PermissionService {
  rpc HasPermission (HasPermissionRequest) returns (HasPermissionResponse);
}

message HasPermissionRequest {
  Actor actor = 1;
  string permission_name = 2;
  string resource_id = 3;
}

message HasPermissionResponse {
  bool has_permission = 1;
}
